fixtures/errors/eval-arguments-conflict.js
(function(arguments) {
  eval('var arguments = "bad";');
})();
